# chatbot

./: .env.example  .gitignore  ALPHA_CONFIG_PROPOSAL.env  ALPHA_E2E_FINAL_REPORT.md  BOT_WORKFLOW.md  COMMIT_MESSAGE.txt  DEVELOPER_GUIDE.md  INTEGRATION_TEST_GUIDE.md  KNOWLEDGE_MANAGEMENT.md  LICENSE  Miami_Basic_Test_Questions.md  Miami_Extreme_RedTeam_Test_Questions.md  PRODUCTION_LAUNCH_REPORT.md  QUICKSTART_CN.md  QUICK_START.md  README.md  REFACTORING-V3-COMPLETE.md  ROUTER_REFACTOR_SUMMARY.md  build.sh  chat_transcript_2025-11-06_10_00_32.csv  local-auto-start.sh  note.txt  package-lock.json  package.json  tran_raw_2024.csv  tran_raw_2025.csv
ai-core/: .env.example  ALPHA_E2E_REPORT.md  CLASSIFICATION_FIX_README.md  DOCKER_HUB_WORKFLOW.md  Dockerfile  Dockerfile.weaviate  EVAL_ITERATION_GUIDE.md  FINAL_TEST_COMPLETE.md  INTENT_ROUTING_ARCHITECTURE.md  README.md  ROUTING_CONTRACT.md  RUN_FINAL_TEST.sh  WEAVIATE_SETUP.md  constraints.txt  docker-compose.weaviate.local.yml  docker-compose.weaviate.yml  pyproject.toml  requirements.txt  schema.prisma  server_monitor.py  uvicorn_log_config.json
ai-core/archived/: function_calling.py.deprecated
ai-core/data/: circulation_policies.jsonl  google_cse_cache.sqlite  ill_rag_data.json  makerspace_location.json  site_map_redirects.jsonl.example  technology_rag_additions.json  weaviate_import.jsonl
ai-core/docs/: DEPLOY-SPEC.md  OPERATOR.md  PROCESS_NEW_YEAR_DATA.md  RAG_DATA_PIPELINE_README.md  RAG_OPTIMIZATION_SUMMARY.md  VECTOR_OPTIMIZATION_QUICKSTART.md  transcript_data_cleaning_strategy.md
ai-core/src/: __init__.py  (+3 more)
(+563 files in other folders)
